# Awale

./: .gitignore  Awale.c  CMakeLists.txt  README.md  awale  awale.c  awale.h  awale_save.c  awale_save.h  client1  client1.c  client1.h  client2.h  launch_awale_advanced.sh  message.h  server  server.c  server.h  stop_game.sh
awale/: awale.c  awale.h  awale_save.c  awale_save.h
client/: client1.c  client1.h  client2.h  client_persistence.c  client_persistence.h
saves/: cool.awale  cool.json  cool2.awale  cool2.json  you.awale  you.json
server/: command.c  command.h  data.h  server.c  server.h  util.c  util.h
